--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,16 @@
 [deps]
+ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
 CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JSOSolvers = "10dff2fc-5484-5881-a0e0-c90441020f8a"
+Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LBFGSB = "5be7bae1-8223-5378-bac3-9e7378a2f6e6"
 Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
 Manopt = "0fc0a36d-df90-57f3-8f93-d78a9fc72bb5"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
+NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+OptimizationProblems = "5049e819-d29b-5fba-b941-0eee7e64c1c6"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SolverBenchmark = "581a75fa-a23a-52d0-a590-d6201de2218a"
+SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
